name:           FoodSearch
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         jpmoresmau

executable FoodSearch
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4 && < 5,
                   containers,
                   LambdaNet,
                   vector,
                   random,
                   hmatrix,
                   pretty
  ghc-options:     -Wall
  other-modules:   
                   AI.FoodSearch.Base,
                   AI.FoodSearch.Neural,
                   AI.FoodSearch.Pretty

test-suite foodsearch-test
  type:            exitcode-stdio-1.0
  main-is:         foodsearch-test.hs
  ghc-options:     -Wall -rtsopts
  build-depends:   
                   base >= 4, tasty >= 0.10.1, tasty-hunit, HUnit, tasty-quickcheck, QuickCheck,
                   LambdaNet,
                   vector,
                   random,
                   hmatrix,
                   pretty
  other-modules:   
                  AI.FoodSearch.Base,
                  AI.FoodSearch.BaseTest,
                  AI.FoodSearch.Neural,
                  AI.FoodSearch.Pretty,
                  AI.FoodSearch.NeuralTest
  hs-source-dirs:  
                  test,
                  src

